--- a/macosx/DriveWire MacServer-Info.plist
+++ b/macosx/DriveWire MacServer-Info.plist
@@ -36,7 +36,7 @@
 			<key>LSTypeIsPackage</key>
 			<true/>
 			<key>NSDocumentClass</key>
-			<string>MyDocument</string>
+			<string>DriveWireDocument</string>
 			<key>NSPersistentStoreTypeKey</key>
 			<string>Binary</string>
 		</dict>
