--- a/java/build.xml
+++ b/java/build.xml
@@ -19,7 +19,7 @@
     <!-- Add any additional server libs that need to be copied -->
   </target>
 
-  <target name="javac" depends="libs" description="Compile java source">
+  <target name="javac" description="Compile java source">
     <mkdir dir="war/WEB-INF/classes"/>
     <javac srcdir="src" includes="**" encoding="utf-8"
         destdir="war/WEB-INF/classes"
