--- a/java/.classpath
+++ b/java/.classpath
@@ -9,16 +9,13 @@
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-net-2.0-javadoc.jar"/>
 	<classpathentry kind="lib" path="lib/commons-net-2.0.jar"/>
-	<classpathentry kind="lib" path="lib/commons-net-ftp-2.0.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
-	<classpathentry kind="lib" path="lib/miglayout-3.7.1-swt.jar"/>
 	<classpathentry kind="lib" path="lib/ostermillerutils_1_07_00.jar"/>
 	<classpathentry kind="lib" path="lib/RXTXcomm.jar"/>
 	<classpathentry kind="lib" path="lib/gwt-servlet.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-api-2.5-20081211.jar"/>
 	<classpathentry kind="lib" path="lib/jetty-6.1H.22.jar"/>
 	<classpathentry kind="lib" path="lib/jetty-util-6.1H.22.jar"/>
-	<classpathentry kind="lib" path="lib/chatengine.jar"/>
-	<classpathentry kind="lib" path="lib/jython.jar"/>
+	<classpathentry kind="lib" path="lib/jasypt-1.6.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
