server side routines for whats in the UI are done but untested

--- a/java/DriveWireServer.properties
+++ b/java/DriveWireServer.properties
@@ -26,6 +26,8 @@ LogToFile = true
 LogFile = dwlog.txt
 # do we put them on the console
 LogToConsole = true
+# optional: format for log lines
+LogFormat = %d{dd MMM yyyy HH:mm:ss} %-5p [%-14t] %26.26C: %m%n
 
 # telnet stuff
 TelnetBannerFile = banner.txt
