Added OS X serial port example

--- a/java/DriveWireServer.properties
+++ b/java/DriveWireServer.properties
@@ -9,7 +9,8 @@ GUIPort = 8080
 AutoStart = true
 
 # serial device, COM1 etc on Windows, /dev/ttyS0 on *nix
-SerialDevice = COM4
+#SerialDevice = /dev/tty.usbserial-USAKMYZM
+SerialDevice = COMr
 
 # coco model: 3 = coco3, 2 = coco2, 1 = coco1
 CocoModel = 3
