--- a/java/DriveWireServer.properties
+++ b/java/DriveWireServer.properties
@@ -10,7 +10,7 @@ AutoStart = true
 
 # serial device, COM1 etc on Windows, /dev/ttyS0 on *nix
 #SerialDevice = /dev/tty.usbserial-USAKMYZM
-SerialDevice = COMr
+SerialDevice = COM4
 
 # coco model: 3 = coco3, 2 = coco2, 1 = coco1
 CocoModel = 3
