--- a/java/DriveWireServer.properties
+++ b/java/DriveWireServer.properties
@@ -9,8 +9,9 @@ GUIPort = 8080
 AutoStart = true
 
 # serial device, COM1 etc on Windows, /dev/ttyS0 on *nix
+SerialDevice = /dev/tty.PL2303-003024FA
 #SerialDevice = /dev/tty.usbserial-USAKMYZM
-SerialDevice = COM4
+#SerialDevice = COM4
 
 # coco model: 3 = coco3, 2 = coco2, 1 = coco1
 CocoModel = 3
@@ -36,9 +37,11 @@ TelnetNoPortsBannerFile = npbanner.txt
 TelnetBanned = 24.178.184.40, 199.248.173.248, 166.137, 71.91, 72.147 
 TelnetBannedFile = banned.txt
 TelnetDefaultActionFile = port2.action
-TelnetUseAuth = true
+TelnetUseAuth = false
 TelnetPreAuthFile = preauth.txt
 TelnetPasswdFile = passwd.txt
+
+TermPort = 6801
 
 # Optional IP address to listen on (effects httpd and telnetd, etc)
 # leave out to listen on all interfaces
