Added RFM stuff to prop file

--- a/java/DriveWireServer.properties
+++ b/java/DriveWireServer.properties
@@ -1,7 +1,7 @@
 # Settings for DriveWire Server
 
 # headless or web GUI mode
-UseGUI = true
+UseGUI = false
 # port to run web interface on
 GUIPort = 8080
 
@@ -9,11 +9,13 @@ GUIPort = 8080
 AutoStart = true
 
 # serial device, COM1 etc on Windows, /dev/ttyS0 on *nix
-SerialDevice = /dev/tty.PL2303-003024FA
+SerialDevice = /dev/tty.PL2303-5B26
+#SerialDevice = /dev/tty.PL2303-003024FA
 #SerialDevice = /dev/tty.usbserial-USAKMYZM
 #SerialDevice = COM4
 
 # coco model: 3 = coco3, 2 = coco2, 1 = coco1
+#CocoModel = 2
 CocoModel = 3
 
 # default diskset file path and name
@@ -32,9 +34,13 @@ LogToConsole = true
 LogFormat = %d{dd MMM yyyy HH:mm:ss} %-5p [%-14t] %26.26C: %m%n
 
 # telnet stuff
-TelnetBannerFile = banner.txt
+TelnetBannerFile = motd
 TelnetNoPortsBannerFile = npbanner.txt
-TelnetBanned = 24.178.184.40, 199.248.173.248, 166.137, 71.91, 72.147 
+TelnetBanned = 24.178.184.40, 199.248.173.248, 166.137, 71.91, 72.147, 65.4, 125.65, 61, 208.61
+GeoIPLookup = true
+GeoIPDatabaseFile = GeoLiteCity.dat
+GeoIPBannedCountries = China
+GeoIPBannedCities = Birmingham,Alabaster
 TelnetBannedFile = banned.txt
 TelnetDefaultActionFile = port2.action
 TelnetUseAuth = false
@@ -46,3 +52,18 @@ TermPort = 6801
 # Optional IP address to listen on (effects httpd and telnetd, etc)
 # leave out to listen on all interfaces
 # ListenAddress = 192.168.128.50
+
+# Printing
+# where do we put output on a flush
+PrinterDir = .
+#waht type of output
+PrinterType = FX80
+# fx80 mode - how many chars per line
+PrinterColumns = 80
+# fx80 mode - how many lines per page, normally 66
+PrinterLines = 66
+# fx80 mode -character definitions file
+PrinterCharacterFile = default.chars
+
+# RFM
+RFMRoot = /Users/boisy/Projects/drivewireserver/java_server
