--- a/DriveWireUI/build.xml
+++ b/DriveWireUI/build.xml
@@ -113,7 +113,8 @@
 		<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/org.eclipse.core.runtime_3.6.0.v20100505.jar"/>
 		<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/org.eclipse.jface_3.6.2.M20110210-1200.jar"/>
 		<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/org.osgi.core-4.3.0.jar"/>
-		                
+		<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/miglayout-4.0.jar"/>
+		<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/miglayout-4.0-swing.jar"/>
 		
         <zipfileset excludes="META-INF/*.SF" src="../java/lib/commons-net-2.0.jar"/>
           <zipfileset excludes="META-INF/*.SF" src="../java/lib/commons-codec-1.4.jar"/>
