--- a/java/pom.xml
+++ b/java/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>DriveWire</groupId>
 	<artifactId>DriveWire</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>4.3.4</version>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
