--- a/java/pom.xml
+++ b/java/pom.xml
@@ -47,11 +47,11 @@
 		</plugins>
 	</build>
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/org.rxtx/rxtx -->
+		<!-- https://mvnrepository.com/artifact/com.neuronrobotics/nrjavaserial -->
 		<dependency>
-			<groupId>org.rxtx</groupId>
-			<artifactId>rxtx</artifactId>
-			<version>2.1.7</version>
+			<groupId>com.neuronrobotics</groupId>
+			<artifactId>nrjavaserial</artifactId>
+			<version>3.14.0</version>
 		</dependency>
 		<!-- /Users/jimhathaway/git/dws/java/lib/guava-11.0.2.jar -->
 		<!-- SHA1: 35a3c69e19d72743cac83778aecbee68680f63eb -->
