Fixed serial dependency in pom.xml

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>DriveWire</groupId>
 	<artifactId>DriveWire</artifactId>
@@ -47,11 +45,11 @@
 		</plugins>
 	</build>
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/com.neuronrobotics/nrjavaserial -->
+		<!-- https://mvnrepository.com/artifact/com.fazecast/jSerialComm -->
 		<dependency>
 			<groupId>com.fazecast</groupId>
 			<artifactId>jSerialComm</artifactId>
-			<version>2.0.2</version>
+			<version>2.5.3</version>
 		</dependency>
 		<!-- /Users/jimhathaway/git/dws/java/lib/guava-11.0.2.jar -->
 		<!-- SHA1: 35a3c69e19d72743cac83778aecbee68680f63eb -->
