--- a/java/pom.xml
+++ b/java/pom.xml
@@ -142,5 +142,11 @@
 			<artifactId>utils</artifactId>
 			<version>1.07.00</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.neuronrobotics/nrjavaserial -->
+		<dependency>
+			<groupId>com.neuronrobotics</groupId>
+			<artifactId>nrjavaserial</artifactId>
+			<version>3.15.0</version>
+		</dependency>
 	</dependencies>
 </project>
