--- a/pom.xml
+++ b/pom.xml
@@ -148,11 +148,12 @@
 			<artifactId>commons-configuration</artifactId>
 			<version>1.6</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j -->
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>2.14.0</version>
+		    <type>pom</type>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.ostermiller/utils -->
 		<dependency>
