--- a/pom.xml
+++ b/pom.xml
@@ -148,13 +148,13 @@
 			<artifactId>commons-configuration</artifactId>
 			<version>1.6</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j -->
-		<dependency>
-		    <groupId>org.apache.logging.log4j</groupId>
-		    <artifactId>log4j</artifactId>
-		    <version>2.14.0</version>
-		    <type>pom</type>
-		</dependency>
+
+    <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>1.2.17</version>
+    </dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.ostermiller/utils -->
 		<dependency>
 			<groupId>org.ostermiller</groupId>
