--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version> <!-- Or a later version that supports JUnit 5 -->
+				<version>3.5.4</version> <!-- Updated from 2.22.2 -->
 			</plugin>
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>3.1.0</version>
+				<version>3.4.0</version>
 				<executions>
 					<execution>
 						<id>copy-resource-one</id>
@@ -76,7 +76,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<version>3.14.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -85,12 +85,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.5.1</version>
+				<version>3.6.1</version>
 				<dependencies>
 					<dependency>
 						<groupId>org.apache.logging.log4j</groupId>
 						<artifactId>log4j-transform-maven-shade-plugin-extensions</artifactId>
-						<version>0.1.0</version>
+						<version>0.2.0</version>
 					</dependency>
 				</dependencies>
 				<executions>
@@ -145,7 +145,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>buildnumber-maven-plugin</artifactId>
-				<version>3.2.0</version>
+				<version>3.2.1</version>
 				<executions>
 					<execution>
 						<phase>validate</phase>
@@ -177,7 +177,7 @@
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
-			<version>1.2</version>
+			<version>1.11.0</version>
 		</dependency>
 		<!-- SHA1: 964cd74171f427720480efdec40a7c7f6e58426a -->
 		<!-- Removed commons-httpclient as it's unused -->
@@ -229,25 +229,25 @@
 		<dependency>
 			<groupId>com.fazecast</groupId>
 			<artifactId>jSerialComm</artifactId>
-			<version>2.10.4</version>
+			<version>2.11.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.8.2</version>
+			<version>5.11.4</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>3.0.0</version>
+			<version>4.11.0</version>
 			<scope>test</scope>
 		</dependency>
 		    <!-- JUnit Jupiter Engine -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.8.2</version> <!-- Use the latest version -->
+			<version>5.11.4</version> <!-- Use the latest version -->
 			<scope>test</scope>
 		</dependency>
  </dependencies>
