--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,11 @@
 			<artifactId>commons-cli</artifactId>
 			<version>1.11.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.googlecode.lanterna</groupId>
+			<artifactId>lanterna</artifactId>
+			<version>3.1.2</version>
+		</dependency>
 		<!-- SHA1: 964cd74171f427720480efdec40a7c7f6e58426a -->
 		<!-- Removed commons-httpclient as it's unused -->
 		<dependency>
